--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&family=Inter:wght@400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&family=Inter:wght@400;500;600;700&family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
         rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
@@ -26,22 +26,24 @@
                     <span>THE ODIN PROJECT</span>
                 </a>
 
-                <div class="nav-links desktop-only">
-                    <a href="/paths" class="nav-link">All Paths</a>
-                    <a href="/about" class="nav-link">About</a>
-                    <a href="/community" class="nav-link">Community</a>
-                    <a href="/support" class="nav-link">Support us</a>
-                    <a href="/signin" class="nav-link">Sign in</a>
-                </div>
+                <div class="nav-right">
+                    <div class="nav-links desktop-only">
+                        <a href="/paths" class="nav-link">All Paths</a>
+                        <a href="/about" class="nav-link">About</a>
+                        <a href="/community" class="nav-link">Community</a>
+                        <a href="/support" class="nav-link">Support us</a>
+                    </div>
 
-                <div class="nav-actions">
-                    <button class="theme-toggle desktop-only" id="theme-toggle">
-                        <i data-lucide="moon"></i>
-                    </button>
-                    <a href="/get-started" class="btn btn-primary desktop-only">Get Started</a>
-                    <button class="mobile-toggle" id="mobile-toggle">
-                        <i data-lucide="menu"></i>
-                    </button>
+                    <div class="nav-actions">
+                        <a href="/signin" class="nav-link desktop-only">Sign in</a>
+                        <button class="theme-toggle desktop-only" id="theme-toggle">
+                            <i data-lucide="moon"></i>
+                        </button>
+                        <a href="/get-started" class="btn btn-primary desktop-only">Get Started</a>
+                        <button class="mobile-toggle" id="mobile-toggle">
+                            <i data-lucide="menu"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </nav>
